--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- FAV ICON -->
-    <link rel="shortcut icon" type="image/x-icon" href="../assets/img/logo/logo-white.png">
+    <link rel="shortcut icon" type="image/x-icon" href="https://noorfaizin.github.io/fiertes/assets/img/logo/logo-white.png">
         
     <!-- ======= All CSS Plugins here ======== -->
-    <link rel="stylesheet" href="../assets/css/plugins/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../assets/css/plugins/glightbox.min.css">
+    <link rel="stylesheet" href="https://noorfaizin.github.io/fiertes/assets/css/plugins/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://noorfaizin.github.io/fiertes/assets/css/plugins/glightbox.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Plugin css -->
-    <link rel="stylesheet" href="../assets/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="https://noorfaizin.github.io/fiertes/assets/css/vendor/bootstrap.min.css">
 
     <!-- Fontawesome Icon -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
 
     <!-- Custom Style CSS -->
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/custom-navbar.css">
-    <link rel="stylesheet" href="../assets/css/extends.css">
-    <link rel="stylesheet" href="../assets/css/infinite-marquee.css">
+    <link rel="stylesheet" href="https://noorfaizin.github.io/fiertes/assets/css/style.css">
+    <link rel="stylesheet" href="https://noorfaizin.github.io/fiertes/assets/css/custom-navbar.css">
+    <link rel="stylesheet" href="https://noorfaizin.github.io/fiertes/assets/css/extends.css">
+    <link rel="stylesheet" href="https://noorfaizin.github.io/fiertes/assets/css/infinite-marquee.css">
 
 </head>
 
@@ -80,7 +80,7 @@
     <div class="marquee">
         <div class="marquee__track">
             <div class="marquee__content">
-                <img src="../assets/img/logo/text-white.png" style="height:20px;">
+                <img src="https://noorfaizin.github.io/fiertes/assets/img/logo/text-white.png" style="height:20px;">
                 <span class="bullet">•</span>
                 <span>Let the Senses Lead</span>
                 <span class="bullet">•</span>
@@ -104,9 +104,9 @@
                     <h1 class="main__logo--title d-flex d-sm-none"><a class="main__logo--link text-dark" href="#">
                         <div class="d-flex align-items-center justify-content-center">
                             <div class="logo-rotate">
-                                <img src="../assets/img/logo/logo-black.png" alt="Logo">
+                                <img src="https://noorfaizin.github.io/fiertes/assets/img/logo/logo-black.png" alt="Logo">
                             </div>
-                            <img class="main__logo--img" src="../assets/img/logo/text-black.png" style="height:25px;">
+                            <img class="main__logo--img" src="https://noorfaizin.github.io/fiertes/assets/img/logo/text-black.png" style="height:25px;">
                         </div>
                     </a></h1>
                 </div>
@@ -114,9 +114,9 @@
                     <nav class="header__menu--navigation text-center">
                         <div class="d-flex align-items-center justify-content-center mb-4">
                             <div class="logo-rotate">
-                                <img src="../assets/img/logo/logo-black.png" alt="Logo">
+                                <img src="https://noorfaizin.github.io/fiertes/assets/img/logo/logo-black.png" alt="Logo">
                             </div>
-                            <img src="../assets/img/logo/text-black.png" style="height: 30px;">
+                            <img src="https://noorfaizin.github.io/fiertes/assets/img/logo/text-black.png" style="height: 30px;">
                         </div>
                         <ul class="d-flex">
                             <li class="header__menu--items">
@@ -172,7 +172,7 @@
         <div class="offcanvas__inner">
             <div class="offcanvas__logo">
                 <a class="offcanvas__logo_link" href="index.html">
-                    <img src="../assets/img/logo/text-black.png" style="height: 30px;">
+                    <img src="https://noorfaizin.github.io/fiertes/assets/img/logo/text-black.png" style="height: 30px;">
                 </a>
                 <button class="offcanvas__close--btn" data-offcanvas>close</button>
             </div>
@@ -190,7 +190,7 @@
                     <ul class="d-flex align-items-center">
                         <li class="language__currency--list">
                             <a class="offcanvas__language--switcher" href="#">
-                                <img class="language__switcher--icon__img" src="../assets/img/icon/lang-en.png" alt="currency" style="width: 20px;">
+                                <img class="language__switcher--icon__img" src="https://noorfaizin.github.io/fiertes/assets/img/icon/lang-en.png" alt="currency" style="width: 20px;">
                                 <span>English</span> 
                                 <svg xmlns="http://www.w3.org/2000/svg" width="11.797" height="9.05" viewBox="0 0 9.797 6.05">
                                     <path  d="M14.646,8.59,10.9,12.329,7.151,8.59,6,9.741l4.9,4.9,4.9-4.9Z" transform="translate(-6 -8.59)" fill="currentColor" opacity="0.7"/>
@@ -235,7 +235,7 @@
             <div class="main__footer pb-5">
                 <div class="row">
                     <div class="col-sm-8 mb-5">
-                        <img class="main__logo--img mb-3" src="../assets/img/logo/text-white.png" style="height:35px;">
+                        <img class="main__logo--img mb-3" src="https://noorfaizin.github.io/fiertes/assets/img/logo/text-white.png" style="height:35px;">
                         <p class="footer__widget--desc text-ofwhite mb-20">Let the Senses Lead</p>
                     </div>
                     <div class="col-sm-4 mb-5">
@@ -249,17 +249,17 @@
                     <ul class="social__shear d-flex">
                         <li class="social__shear--list">
                             <a target="_blank" href="#!">
-                                <img src="../assets/img/icon/market/instagram.png" style="width: 30px;">
+                                <img src="https://noorfaizin.github.io/fiertes/assets/img/icon/market/instagram.png" style="width: 30px;">
                             </a>
                         </li>
                         <li class="social__shear--list">
                             <a target="_blank" href="#!">
-                                <img src="../assets/img/icon/market/tiktok.png" style="width: 30px;">
+                                <img src="https://noorfaizin.github.io/fiertes/assets/img/icon/market/tiktok.png" style="width: 30px;">
                             </a>
                         </li>
                         <li class="social__shear--list">
                             <a target="_blank" href="#!">
-                                <img src="../assets/img/icon/market/shopee.png" style="width: 30px;">
+                                <img src="https://noorfaizin.github.io/fiertes/assets/img/icon/market/shopee.png" style="width: 30px;">
                             </a>
                         </li>
                     </ul>
@@ -273,21 +273,21 @@
 
     <!-- Buttoon chat whatsapp  -->
     <a href="https://wa.me/+6285726017917/" target="_blank" class="btn-wa btn btn-light">
-        <img src="../assets/img/icon/whatsapp.png" style="height: 30px;margin-right: 10px;">Chat with us!
+        <img src="https://noorfaizin.github.io/fiertes/assets/img/icon/whatsapp.png" style="height: 30px;margin-right: 10px;">Chat with us!
     </a>
 
     <!-- Scroll top bar -->
     <button class="color-scheme-2" id="scroll__top"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="48" d="M112 244l144-144 144 144M256 120v292"/></svg></button>
 
     <!-- All Script JS Plugins here  -->
-    <script src="../assets/js/vendor/popper.js" defer="defer"></script>
-    <script src="../assets/js/vendor/bootstrap.min.js" defer="defer"></script>
-    <script src="../assets/js/plugins/swiper-bundle.min.js"></script>
-    <script src="../assets/js/plugins/glightbox.min.js"></script>
+    <script src="https://noorfaizin.github.io/fiertes/assets/js/vendor/popper.js" defer="defer"></script>
+    <script src="https://noorfaizin.github.io/fiertes/assets/js/vendor/bootstrap.min.js" defer="defer"></script>
+    <script src="https://noorfaizin.github.io/fiertes/assets/js/plugins/swiper-bundle.min.js"></script>
+    <script src="https://noorfaizin.github.io/fiertes/assets/js/plugins/glightbox.min.js"></script>
 
     <!-- Customscript js -->
-    <script src="../assets/js/script.js"></script>
-    <script src="../assets/js/infinite-marquee.js"></script>
+    <script src="https://noorfaizin.github.io/fiertes/assets/js/script.js"></script>
+    <script src="https://noorfaizin.github.io/fiertes/assets/js/infinite-marquee.js"></script>
 
     <script>
     let lastScrollTop = 0;
