--- a/index.html
+++ b/index.html
@@ -497,6 +497,9 @@
     });
 });
 </script>
+<script>
+const baseUrl = "https://noorfaizin.github.io/fiertes/";
+</script>
 <script src="https://noorfaizin.github.io/fiertes/assets/js/recommendation.js"></script>
 
 <!-- Start footer section -->
