--- a/our-fragrances.html
+++ b/our-fragrances.html
@@ -415,6 +415,54 @@
     </section>
 </main>
 
+<!-- Product detail popup -->
+<div class="modal" id="modal1" data-animation="slideInUp">
+    <div class="modal-dialog quickview__main--wrapper">
+        <header class="modal-header quickview__header">
+            <button class="close-modal quickview__close--btn" aria-label="close modal" data-close>✕ </button>
+        </header>
+        <div class="quickview__inner">
+            <div class="row row-cols-lg-2 row-cols-md-2">
+                <!-- Foto produk  -->
+                <div class="col-sm-6">
+                    <div class="quickview__product--media product__details--media text-center">
+                        <div class="swiper-slide">
+                            <div class="product__items ">
+                                <div class="product__items--thumbnail">
+                                    <a class="product__items--link" href="product-detail.html">
+                                        <img class="product__items--img product__primary--img" src="https://noorfaizin.github.io/fiertes/assets/img/product/parfume-A-01.jpg" alt="product-img">
+                                        <img class="product__items--img product__secondary--img" src="https://noorfaizin.github.io/fiertes/assets/img/product/parfume-A-02.jpg" alt="product-img">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Deskripsi produk  -->
+                <div class="col-sm-6 pl-0">
+                    <div class="quickview__info">
+                        <h3 class="mb-3">LA SÉRÉNITÉ - Sense of Touch</h3>
+                        <div class="product__details--info__price mb-10">
+                            <span class="current__price" style="font-size: 18px;">Rp345.000</span>
+                        </div>
+                        <hr>
+                        <p class="product__details--info__desc mb-15" style="font-size: 14px;">
+                            Imagine a pair of gentle hands easing away the tension after a long day. That’s the feeling La Sérénité brings. This calming floral-chypre scent carries you into a quiet space that feels like a warm massage. Soft, peaceful, and grounding. <br>
+                            Its scent doesn’t just linger in the air, it touches you. A slow wave of relaxation unfolds, like a soothing massage that restores balance to both body and mind.<br>
+                        </p>
+                        <div class="product__variant mt-5 d-flex">
+                            <a href="shop.html" class="primary__btn quickview__cart--btn m-0" type="submit">
+                                Shop now <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Start footer section -->
 <footer class="footer__section bg__black color-scheme-2">
     <div class="container-fluid">
