--- a/product-detail.html
+++ b/product-detail.html
@@ -237,7 +237,7 @@
                 <span class="mx-2">/</span>
                 <a class="blog__post--meta__link" href="shop.html">Shop</a>
                 <span class="mx-2">/</span>
-                BLOOMORA — Sense of Sight
+                LA SÉRÉNITÉ - Sense of Touch
             </p>
             <div class="row row-cols-lg-2 row-cols-md-2">
                 <div class="col">
