--- a/find-us.html
+++ b/find-us.html
@@ -250,7 +250,7 @@
             <div class="row mx-auto">
                 <!-- Location 01  -->
                 <div class="col-md-6 py-5">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3960.0028095243656!2d110.40958417594523!3d-7.0089509686551335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e708b70f7bdaa51%3A0xfa560bfca7f0b39b!2sJl.%20Slamet%20No.41%2C%20Gajahmungkur%2C%20Kec.%20Gajahmungkur%2C%20Kota%20Semarang%2C%20Jawa%20Tengah%2050232!5e0!3m2!1sid!2sid!4v1746436358061!5m2!1sid!2sid" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.314731572721!2d110.84337707374812!3d-6.731402365814413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6b5e68a75e6c375b%3A0xddf5e7fba728491d!2sLegitima%20Indonesia!5e0!3m2!1sid!2sid!4v1769024015665!5m2!1sid!2sid" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div class="col-md-6 py-5">
                     <div class="me-fragrances">
