Update popup question

--- a/index.html
+++ b/index.html
@@ -347,11 +347,11 @@
 
 <!-- Popup questions -->
 <div class="newsletter__popup" data-animation="slideInUp">
-    <div id="boxes" class="newsletter__popup--inner px-3">
+    <div id="boxes" class="newsletter__popup--inner p-0">
         <button class="newsletter__popup--close__btn" aria-label="search close button" style="z-index: 999;">
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 512 512"><path fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32" d="M368 368L144 144M368 144L144 368"></path></svg>
         </button>
-        <div class="box newsletter__popup--box py-3">
+        <div class="box newsletter__popup--box p-0" style="overflow: hidden;max-height: 700px;">
             <div id="banner-quiz" style="background: url('https://noorfaizin.github.io/fiertes/assets/img/slider/home2-slider1.png');
                 background-repeat: no-repeat;
                 background-attachment: scroll;
@@ -370,7 +370,7 @@
                     </div>
                 </div>
             </div>
-            <div class="hidden" id="start-question">
+            <div class="hidden p-3" id="start-question">
                 <div class="card card-body" id="ask-quiz">
                     <form id="quizForm">
                         <!-- STEP 1 -->
