update button shop

--- a/shop.html
+++ b/shop.html
@@ -362,8 +362,8 @@
                                 <ul class="product__items--action d-flex">
                                     <li class="product__items--action__list">
                                         <a class="product__items--action__btn add__to--cart" href="product-detail.html">
-                                            <svg class="product__items--action__btn--svg" xmlns="http://www.w3.org/2000/svg"  width="25.51" height="23.443" viewBox="0 0 512 512"><path d="M255.66 112c-77.94 0-157.89 45.11-220.83 135.33a16 16 0 00-.27 17.77C82.92 340.8 161.8 400 255.66 400c92.84 0 173.34-59.38 221.79-135.25a16.14 16.14 0 000-17.47C428.89 172.28 347.8 112 255.66 112z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><circle cx="256" cy="256" r="80" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/></svg>
-                                            <span class="add__to--cart__text"> View Product</span>
+                                            <i class="fas fa-eye mr-3"></i>
+                                            <span> View Product</span>
                                         </a>
                                     </li>
                                 </ul>
@@ -392,8 +392,8 @@
                                 <ul class="product__items--action d-flex">
                                     <li class="product__items--action__list">
                                         <a class="product__items--action__btn add__to--cart" href="product-detail.html">
-                                            <svg class="product__items--action__btn--svg" xmlns="http://www.w3.org/2000/svg"  width="25.51" height="23.443" viewBox="0 0 512 512"><path d="M255.66 112c-77.94 0-157.89 45.11-220.83 135.33a16 16 0 00-.27 17.77C82.92 340.8 161.8 400 255.66 400c92.84 0 173.34-59.38 221.79-135.25a16.14 16.14 0 000-17.47C428.89 172.28 347.8 112 255.66 112z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><circle cx="256" cy="256" r="80" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/></svg>
-                                            <span class="add__to--cart__text"> View Product</span>
+                                            <i class="fas fa-eye mr-3"></i>
+                                            <span> View Product</span>
                                         </a>
                                     </li>                                    
                                 </ul>
@@ -422,8 +422,8 @@
                                 <ul class="product__items--action d-flex">
                                     <li class="product__items--action__list">
                                         <a class="product__items--action__btn add__to--cart" href="product-detail.html">
-                                            <svg class="product__items--action__btn--svg" xmlns="http://www.w3.org/2000/svg"  width="25.51" height="23.443" viewBox="0 0 512 512"><path d="M255.66 112c-77.94 0-157.89 45.11-220.83 135.33a16 16 0 00-.27 17.77C82.92 340.8 161.8 400 255.66 400c92.84 0 173.34-59.38 221.79-135.25a16.14 16.14 0 000-17.47C428.89 172.28 347.8 112 255.66 112z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><circle cx="256" cy="256" r="80" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/></svg>
-                                            <span class="add__to--cart__text"> View Product</span>
+                                            <i class="fas fa-eye mr-3"></i>
+                                            <span> View Product</span>
                                         </a>
                                     </li>                                    
                                 </ul>
@@ -452,8 +452,8 @@
                                 <ul class="product__items--action d-flex">
                                     <li class="product__items--action__list">
                                         <a class="product__items--action__btn add__to--cart" href="product-detail.html">
-                                            <svg class="product__items--action__btn--svg" xmlns="http://www.w3.org/2000/svg"  width="25.51" height="23.443" viewBox="0 0 512 512"><path d="M255.66 112c-77.94 0-157.89 45.11-220.83 135.33a16 16 0 00-.27 17.77C82.92 340.8 161.8 400 255.66 400c92.84 0 173.34-59.38 221.79-135.25a16.14 16.14 0 000-17.47C428.89 172.28 347.8 112 255.66 112z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="32"/><circle cx="256" cy="256" r="80" fill="none" stroke="currentColor" stroke-miterlimit="10" stroke-width="32"/></svg>
-                                            <span class="add__to--cart__text"> View Product</span>
+                                            <i class="fas fa-eye mr-3"></i>
+                                            <span> View Product</span>
                                         </a>
                                     </li>
                                 </ul>
